# fermata-masterclass

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  NOTICE  README.md  pyproject.toml
doc/: README.md  alignment.md  architecture.md  byo-key.md  chat.md  data-model.md  decisions.md  extending.md  limitations.md  operations.md  pipeline.md  roadmap.md  score-prep.md  teacher.md  tooling.md  ui.md
scripts/: README.md  install_tools.ps1  rebuild_score_map.py  rerun_hmm_align.py  rerun_teacher.py  verify_matcher.py
src/masterclass/: __init__.py
src/masterclass/agent/: __init__.py  dry_run.py  gemini.py  llm.py  teacher.py  usage.py
src/masterclass/agent_tools/: __init__.py  _common.py  _drill_guard.py  catalog.py  get_frames.py  inspect_bar.py  inspect_chord.py  inspect_intonation.py  inspect_note.py  inspect_voicing.py  list_frames.py  listen.py  measure_dynamics.py  measure_tempo.py  measure_trill.py  measure_vibrato.py  registry.py  voicing.py  watch.py
src/masterclass/auth/: __init__.py  encryption.py  google_oauth.py
src/masterclass/core/: __init__.py  artifact_catalog.py  chat_models.py  conversation_lock.py  jobs.py  masterclasses.py  models.py  played_range.py  sessions.py  user_profiles.py
src/masterclass/engine/: __init__.py  aligned_notes.py  alignment.py  analysis.py  audio_truth.py  (+28 more)
tests/: conftest.py
tests/agent/: test_cached_token_pricing.py
tests/agent_tools/: test_inspect_intonation.py  test_measure_tempo_invalid_bar.py
tests/apps/: test_drill_endpoints.py
tests/core/: test_artifact_catalog.py  test_chat_first_reply.py  test_drill_schema.py
tests/engine/: fixture_bach_matcher.json  test_aligned_notes.py  test_drill_pipeline.py  test_evidence_packet_score_inventory.py  test_intonation_audio_truth.py  test_match_to_score.py  test_match_to_score_monotonicity.py  test_played_range_sandbox.py  test_rhythm_audio_truth.py  test_score_map_musicxml.py  test_wildcard_omr_gaps.py
tests/observability/: test_logging_setup.py
tests/storage/: test_adls_not_found.py  test_storage_delete_and_retry.py
tools/: README.md
(+22 files in other folders)
