[project]
name = "music-masterclass-v2"
version = "0.1.0"
description = "Production-shaped music masterclass service scaffold."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
api = ["fastapi", "python-multipart", "uvicorn", "authlib", "cryptography"]
azure = ["azure-storage-file-datalake", "azure-identity"]
llm = ["google-genai"]

[project.scripts]
masterclass-v2 = "masterclass.apps.cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
